--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-log/sql
+./log/sql/
+./storage/images/
+
+/log/sql/
+/storage/images/
+
+log/sql/
 storage/images/
-guixe
-webalizer
-xampp
-bitnami.css
-favicon.ico
-applications.html
-datn
+
+/Constant/EnvConst.php
